--- a/views/index0.html
+++ b/views/index0.html
@@ -30,6 +30,11 @@
             <p>Simple management tool for the Jade.</p>
           </blockquote>
 
+          Jade-manager is administrator tool for jade.
+
+          The jade is asterisk based call center solution.<br>
+          See detail for jade at here. https://github.com/pchero/jade
+
         </div>
         <div class="col-md-4 col-lg-4 col-sm-5">
           <h5><a href="https://github.com/pchero/jade-manager">https://github.com/pchero/jade-manager</a></h5>
@@ -42,6 +47,3 @@
     </div>
   </div>
 </div>
-
-
-
